# Incetance_Segmentation_Study

./: pyproject.toml  requirements.txt
mrcnn/: model.py  parallel_model.py  utils.py
samples/: demo.ipynb
samples/coco/: coco.py
samples/shapes/: train_shapes.ipynb
